# dc-yt-dlp

./: .gitignore  Makefile  README.md  config.dist.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: code-check.yml
doc/: dsdata.json  dsdata_videos.json  rel.xml  ytinfos.json
scripts/: wrapper.sh
src/dcytdl/: __init__.py  cli.py  discogs.py
src/test/dcytdlp/: test_cli.py  test_discogs.py
